--- a/style.css
+++ b/style.css
@@ -3,13 +3,11 @@ nav {
 	width: 80vw;
 	margin: auto;
 	height: 20vh;
-	/*position: relative;*/
 }
 
 .round {
 	border-radius: 10px;
 	background: #1988E0;
-	/*border: 3px solid #BADA55;*/
 }
 
 .nav-text {
@@ -28,5 +26,27 @@ body {
 
 .container {
 	width: 80vw;
+	height: 30vh;
 	margin: auto;
+	display: flex;
+	padding: 2vw 4vw 4vw;
 }
+
+.container > img {
+	width: 20vw;
+	object-fit: contain;
+	align-self: flex-start;
+}
+
+.container > .text {
+	padding: 2vw;
+	flex: 1 1 auto;
+}
+
+/*.truncate {
+	height: 100%;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}*/
+
