--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
 	padding: 2vw 4vw 4vw;
 }
 
-.container > img {
+.container > image {
 	width: 20vw;
 	object-fit: contain;
 	align-self: flex-start;
