--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
+/*for responsive design, equivalent to meta viewport html*/
+/*@viewport {
+  width: device-width ;
+  zoom: 1.0 ;
+}*/
+
 nav {
 	border: 1px solid;
+	background: #1988E0;
 	width: 80vw;
 	margin: auto;
 	height: 20vh;
@@ -7,13 +14,14 @@ nav {
 
 .round {
 	border-radius: 10px;
-	background: #1988E0;
+	
 }
 
 .nav-text {
 	text-align: center;
 }
 
+/** todo  segregate class  & make them responsive **/
 q {
 	max-width: 20em;
   	margin: 1em;
@@ -32,7 +40,7 @@ body {
 	padding: 2vw 4vw 4vw;
 }
 
-.container > image {
+.container > .image {
 	width: 20vw;
 	object-fit: contain;
 	align-self: flex-start;
@@ -50,3 +58,22 @@ body {
 	text-overflow: ellipsis;
 }*/
 
+/*
+@media screen {
+    * {
+        background: silver
+    }
+}*/
+
+@media screen and (max-width: 640px) {
+	nav {
+		background: white;
+		width: 90vw;
+		height: 10vh;
+	}
+
+	.container > .image {
+		background: black;
+		object-fit: fill;
+	}
+}
